--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Update packages
-        run: apt-get update python3 && apt-get upgrade python3
+        run: apt-get update && apt-get upgrade python3
 
       - name: Run tests
         run: python3 tests/test_application.py
